homescreen UI issue partially done

--- a/package.json
+++ b/package.json
@@ -107,11 +107,12 @@
     "react-native-reanimated": "2.1.0",
     "react-native-render-html": "4.2.3",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-samsung-accessory": "0.1.22",
+    "react-native-samsung-accessory": "^0.1.22",
     "react-native-screens": "2.16.1",
     "react-native-shadow-2": "^6.0.0",
     "react-native-simple-gradient-progressbar-view": "^0.2.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "5.4.0",
     "react-native-swipe-gestures": "1.0.5",
@@ -121,7 +122,7 @@
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "8.1.0",
     "react-native-view-shot": "3.1.2",
-    "react-native-webview": "11.4.5",
+    "react-native-webview": "^11.18.1",
     "react-native-wheel-picker-android": "2.0.6",
     "reactronic": "0.21.512",
     "rn-lineawesomeicons": "0.0.3",
